# DoveVPN

./: .gitignore  README.md  TODO  configure.ac
conf/: client.conf  server.conf
scripts/: genca.sh  gencert.sh
src/: Makefile.am  dv_buf.c  dv_buf.h  dv_conf.c  dv_conf.h  dv_debug.h  dv_if.c  dv_if.h  dv_lib.h  dv_log.c  dv_mem.c  dv_mem.h  dv_msg.c  dv_msg.h  dv_openssl.c  dv_proto.c  dv_proto.h  dv_socket.c  dv_socket.h  dv_tls.c  dv_trans.c  dv_trans.h  dv_tun.c  dv_tun.h
src/client/: Makefile.am  dv_client_conf.c  dv_client_conf.h  dv_client_main.c  dv_client_net.c  dv_client_net.h  dv_client_net6.c  dv_client_process.c  dv_client_process.h  dv_client_ssl.c  dv_client_ssl.h  dv_client_vpn.c  dv_client_vpn.h
src/include/: dv_assert.h  dv_errno.h  dv_lib.h  dv_log.h  dv_proto.h  dv_tun.h  dv_types.h  jhash.h
src/lib/: Makefile.am  dv_buf.c  dv_buf.h  dv_buffer.c  dv_buffer.h  dv_channel.c  dv_channel.h  dv_conf.c  dv_conf.h  dv_cpuaffinity.c  dv_cpuaffinity.h  dv_event.c  dv_event.h  dv_if.c  dv_if.h  dv_lib.c  dv_lib.h  dv_log.c  dv_log.h  dv_msg.c  dv_msg.h  dv_openssl.c  dv_process.c  dv_process.h  dv_proto.c  dv_proto.h  dv_setproctitle.c  dv_setproctitle.h  dv_signal.c  dv_signal.h  dv_socket.c  dv_socket.h  dv_tls.c  dv_trans.c  dv_trans.h  dv_tun.c  dv_tun.h
src/server/: Makefile.am  dv_event.c  dv_event.h  dv_ip_pool.c  dv_ip_pool.h  dv_server_conf.c  dv_server_conf.h  dv_server_conn.c  dv_server_conn.h  dv_server_core.c  dv_server_core.h  dv_server_cycle.c  dv_server_cycle.h  dv_server_main.c  dv_server_signal.c  dv_server_signal.h  dv_server_socket.c  dv_server_socket.h  dv_server_tun.c  dv_server_tun.h
src/tools/: Makefile.am  dv_tunctl.c
test/: dv_test.c
test/conf/: test.conf
test/keys/: ca.cer  ca.key  client.cer  client.key  server.cer  server.key
test/src/: Makefile.am  dv_conn_hash.c  dv_conn_hash.h  dv_test_conf.c  dv_test_conf.h  dv_test_cycle.c  dv_test_cycle.h  dv_test_main.c
